about section mobile fix

--- a/src/components/About/about.styles.css
+++ b/src/components/About/about.styles.css
@@ -38,7 +38,7 @@
 
     .about-container {
         font-size: 1.2rem;
-        height: 75vh;
+        /* height: 75vh; */
     }
 
     .about-container>.section {
